<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/movie_title"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_movie_title_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genree"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_movie_genre_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearr"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_year_of_movie_release_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#7602B5"
            android:text="@string/insert"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7602B5"
            android:text="@string/show_list"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>